web: bug fixes and improvements
- The table structure for message-board posts was messed up.  Simplify it.
- make buttons x-small
- make button text white

--- a/html/user/custom_dark.css
+++ b/html/user/custom_dark.css
@@ -4,7 +4,7 @@ body, navbar-text, panel {
     color:white;
 }
 
-table a:not(.btn), .table a:not(.btn), table a, .table a, a:not(.btn) {
+table a:not(.btn), .table a:not(.btn), a:not(.btn) {
     color: sandybrown;
     text-decoration: none;
 }
@@ -14,7 +14,7 @@ table a:hover, .table a:hover, a:hover {
     text-decoration: underline;
 }
 
-table a:visited, .table a:visited, a:visited:not(.btn) {
+table a:visited:not(.btn), .table a:visited:not(.btn), a:visited:not(.btn) {
     color: sandybrown;
     text-decoration: underline;
 }
